# ConcurrentFramework

./: CMakeLists.txt  README.md  main.cpp
include/: agent.hpp  data_queue.hpp  environment.hpp  logutil.hpp  worker.hpp  workflow.hpp
src/: agent.cpp  data_queue.cpp  environment.cpp  logutil.cpp  worker.cpp  workflow.cpp
